fixed add and Remove